fix style alignment using padding and margins

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -89,7 +89,7 @@ h3{
 	margin-top:20px;
 	justify-content:space-evenly;
 	background-color:gainsboro;
-	padding:2%;
+	padding:2% 0%;
 }
 .navbarlink{
 	align-items: center;
@@ -122,7 +122,7 @@ h3{
 }
 section {
 	display:flex;
-	margin:2%;
+	margin:2% 0%;
 	flex-direction:column;
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
@@ -134,20 +134,25 @@ section {
 }
 .subsection{
 	display:flex;
-	justify-content:space-evenly;
+	justify-content:space-between;
+	margin:2% 0%;
 }
 .subdiv{
 	display:flex;
 	justify-content:space-between;
-	margin:2%;
+	margin:0%;
+	border:0%;
+
 }
 .subsection1{
 	display:flex;
-	justify-content:space-around;
+	justify-content:space-between;
+	padding:0;
+	margin:0;
 }
 .sectionDivs{
 	margin-top:2%;
-	padding:0 1%;
+	padding:0%;
 	padding-bottom:5%;
 	width:48%;
 }
@@ -172,7 +177,7 @@ section {
 	margin:3% 0%;
 }
 p{
-	padding: 10px 0px;
+	padding: 10px ;
 }
 footer{
 	flex-direction:column;
@@ -194,16 +199,20 @@ footer{
 	height:30%;
 }
 .services-info-img{
-	width: 95%;
+	width: 100%;
 	height:70%;
 	margin:0;
 }
-ul{	margin-left:3%;
+ul{	margin-left:5%;
 	list-style-type: disc;
 }
 li{
-	padding: 5px;
+	padding: 5px ;
 }
 .fix{
 	padding-bottom:2%
+}
+.final{
+	margin:0;
+	padding:0;
 }
